# x3p

./: README
Licence/: openGPS_Licence.txt  openGPS_Licence_Template.c
doc/SDK/HTML_Stylesheet/: doxy_footer.html  doxy_header.html
doc/SDK/latex_stylesheet/: openGPS_Logo_Final.eps
include/opengps/: ReadMe.txt  data_point.h  data_point_type.h  iso5436_2.h
include/opengps/cxx/: exceptions.hxx  iso5436_2.hxx  iso5436_2_handle.hxx  opengps.hxx  point_iterator.hxx  point_vector.hxx  point_vector_base.hxx
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/Licence/: openGPS_Licence_Template.m
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/include/opengps/: info.h  messages.h  opengps.h  point_iterator.h  point_vector.h
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/src/: CMakeLists.txt  iso5436-2.sln  iso5436_2.pro  openGPS.sln
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/src/ISO5436_2_XML/: CMakeLists.txt  ISO5436_2_XML.pro  ISO5436_2_XML.vcxproj  ISO5436_2_XML.vcxproj.filters  create_cpp_from_xsd.bat  iso5436_2.xsd  xsd_Licence_Header.c
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/src/ISO5436_2_XML/c/: data_point_c.hxx  info_c.cxx  iso5436_2_c.cxx  iso5436_2_handle_c.hxx
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/src/ISO5436_2_XML/cxx/: binary_lsb_point_vector_reader_context.cxx  binary_msb_point_vector_reader_context.cxx  binary_msb_point_vector_writer_context.hxx  binary_point_vector_writer_context.cxx  binary_point_vector_writer_context.hxx  data_point_impl.cxx  double_data_point_parser.cxx  exceptions.cxx  float_data_point_parser.cxx  float_data_point_parser.hxx  float_point_buffer.cxx  info.cxx  inline_validity.cxx  int16_data_point_parser.cxx  int16_data_point_parser.hxx  int16_point_buffer.cxx  int16_point_buffer.hxx  int32_point_buffer.cxx  iso5436_2.cxx  iso5436_2_container.cxx  iso5436_2_container.hxx  iso5436_2_xsd_utils.cxx  linux_environment.cxx  linux_environment.hxx  point_buffer.hxx  point_iterator.cxx  point_validity_provider.cxx  point_vector.cxx  point_vector_iostream.cxx  point_vector_iostream.hxx  point_vector_parser_builder.cxx  point_vector_parser_builder.hxx  point_vector_proxy_context.cxx  point_vector_proxy_context.hxx  point_vector_proxy_context_list.cxx  point_vector_proxy_context_matrix.hxx  point_vector_reader_context.hxx  point_vector_writer_context.hxx  string.cxx  vector_buffer.cxx  (+5 more)
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/src/ISO5436_2_XML/xyssl/: md5.c
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/src/ISO5436_2_XML_Demo/: CMakeLists.txt  ISO5436_2_XML_Demo.pro  ISO5436_2_XML_Demo.vcproj  ISO5436_2_XML_Demo.vcxproj  ISO5436_2_XML_Demo_properties.props
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/src/ISO5436_2_XML_Demo/samplefiles/: ISO5436-sample1.x3p  ISO5436-sample1.xml  ISO5436-sample2.x3p  ISO5436-sample2.xml  ISO5436-sample3.x3p  ISO5436-sample4.x3p  ISO5436-sample4.xml  ISO5436-sample4_bin.xml  SkiInfiniteFocus.x3p
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/src/MATLAB/ImportExportX3P/: MakeX3PMex.m  PlotX3P_3D.m  ReadMe.txt  TestX3P.m  X3PUtilities.cpp  X3PUtilities.h  openX3P.cpp  writeX3P.cpp  writeX3P_mex.cpp
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/src/MATLAB/X3PToolbox/: ISO5436-sample1_bin.x3p  KautschukInfiniteFocus.x3p  README.txt  TestX3P.m  X3PMetaInfo.m  iso5436_2.xsd  openX3P_mex.mexw64  readX3P.m  setup_x3p_mex.m  writeX3P_mex.mexw64
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/src/tools/: Readme.txt
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/src/tools/CustomCmake/: FindOpengps.cmake
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/src/tools/IncRev/: IncRev.c
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/src/zlib/: CMakeLists.txt  zlib.vcxproj.filters
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/src/zlib/contrib/minizip/: CMakeLists.txt  Makefile  minizip.pc
open-gps-code-382-ISO5436_XML-branches-Kohler_LinuxPort/src/zlib/contrib/vstudio/vc10/: miniunz.vcxproj  zlibstat.vcxproj
src/: CMakeLists.txt  Doxyfile  Doxygen.cpp
src/ISO5436_2_XML/: FindXSD.cmake  FindXerces.cmake  ISO5436_2_XML.vcproj  ISO5436_2_XML_properties.props
src/ISO5436_2_XML/c/: data_point_c.cxx  messages_c.cxx  messages_c.hxx  point_iterator_c.cxx  point_iterator_c.hxx  point_vector_c.cxx  point_vector_c.hxx
src/ISO5436_2_XML/cxx/: auto_ptr_types.hxx  binary_lsb_point_vector_reader_context.hxx  binary_lsb_point_vector_writer_context.cxx  binary_lsb_point_vector_writer_context.hxx  binary_msb_point_vector_reader_context.hxx  binary_msb_point_vector_writer_context.cxx  binary_point_vector_reader_context.cxx  binary_point_vector_reader_context.hxx  data_point.cxx  data_point_impl.hxx  data_point_parser.hxx  data_point_proxy.cxx  double_data_point_parser.hxx  double_point_buffer.cxx  double_point_buffer.hxx  environment.cxx  environment.hxx  float_point_buffer.hxx  inline_validity.hxx  int32_data_point_parser.cxx  int32_data_point_parser.hxx  int32_point_buffer.hxx  iso5436_2_container.cxx  linux_environment.hxx  missing_data_point_parser.cxx  missing_data_point_parser.hxx  point_buffer.cxx  point_validity_provider.hxx  point_vector_iostream.hxx  point_vector_parser.cxx  point_vector_parser.hxx  point_vector_proxy.cxx  point_vector_proxy.hxx  point_vector_proxy_context_list.hxx  point_vector_proxy_context_matrix.cxx  stdafx.hxx  string.cxx  valid_buffer.cxx  valid_buffer.hxx  vector_buffer.hxx  (+7 more)
src/ISO5436_2_XML/xyssl/: md5.h
src/ISO5436_2_XML_Demo/: FindMinizip.cmake  FindXSD.cmake  FindXerces.cmake  ISO5436_2_XML_Demo.cxx  ISO5436_2_XML_Demo.vcxproj.filters  RunDemo.bat
src/ISO5436_2_XML_Demo/samplefiles/: ExamplesReadMe.txt  ISO5436-sample1_bin.xml  ISO5436-sample3.xml  ISO5436-sample4_bin.x3p  Sample_Files_Description_for_Doxygen.h
src/MATLAB/CreateSampleFiles/: CreateSampleFromNMS.m  Readme.txt
src/MATLAB/ImportExportX3P/: ImportExportX3P.vcproj  MakeX3PMex.m  TestX3P.m  VendorSpecificDemo.m  (+1 more)
src/zlib/: CMakeLists.txt  zlib.vcxproj
(+18 files in other folders)
